// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Level 2 — golden > best possible score 1`] = `
{
  "budget": 4,
  "knowledge": 10,
  "quality": 4,
  "safety": 5,
  "time": 2,
  "trust": 8,
}
`;

exports[`Level 2 — golden > final score and summary for a recommended playthrough 1`] = `
{
  "overallRating": "excellent",
  "ratings": {
    "budget": "excellent",
    "knowledge": "excellent",
    "quality": "excellent",
    "safety": "excellent",
    "time": "excellent",
    "trust": "excellent",
  },
  "score": {
    "budget": 4,
    "knowledge": 10,
    "quality": 4,
    "safety": 5,
    "time": 2,
    "trust": 8,
  },
}
`;

exports[`Level 2 — golden > recommended-choice score deltas per item 1`] = `
[
  {
    "choice": "verify",
    "item": "l2-permits-awareness",
    "scoreDelta": {
      "budget": 1,
      "knowledge": 2,
      "safety": 1,
      "trust": 1,
    },
  },
  {
    "choice": "ask-community",
    "item": "l2-common-elements",
    "scoreDelta": {
      "knowledge": 2,
      "quality": 1,
      "trust": 2,
    },
  },
  {
    "choice": "respect-hours",
    "item": "l2-noise-hours",
    "scoreDelta": {
      "knowledge": 1,
      "safety": 1,
      "trust": 2,
    },
  },
  {
    "choice": "plan-waste",
    "item": "l2-waste-management",
    "scoreDelta": {
      "budget": 2,
      "knowledge": 1,
      "quality": 1,
      "trust": 1,
    },
  },
  {
    "choice": "realistic-plan",
    "item": "l2-planning-calendar",
    "scoreDelta": {
      "budget": 1,
      "knowledge": 2,
      "quality": 1,
      "time": 2,
      "trust": 1,
    },
  },
  {
    "choice": "check-technician",
    "item": "l2-when-technician",
    "scoreDelta": {
      "knowledge": 2,
      "quality": 1,
      "safety": 3,
      "trust": 1,
    },
  },
]
`;

exports[`Level 2 — golden > required red flags 1`] = `
[
  "«No hace falta papeleo» afirmado sin comprobarlo",
  "Empezar la obra antes de aclarar qué trámite corresponde",
  "Actuar sobre fachada o elementos comunes sin contar con la comunidad",
  "Dar por privativo lo que puede ser un elemento común",
  "Ruido de obra fuera de los horarios permitidos",
  "No avisar a los vecinos del calendario y las molestias",
  "Gestión de escombros sin prever ni presupuestar",
  "Acumular residuos de obra en zonas comunes",
  "Plazos prometidos sin fases, holguras ni plan de materiales",
  "No prever imprevistos ni el orden de los gremios",
  "Asumir que ningún elemento es estructural sin que lo compruebe un técnico",
  "Tratar cualquier tabique como si todos fueran iguales",
]
`;

exports[`Level 2 — golden > suggested audit checklist 1`] = `
[
  "Se ha comprobado en la fuente oficial qué trámite (si lo hay) corresponde a la obra",
  "La obra no empieza hasta que el trámite aplicable está claro",
  "Se han revisado los estatutos de la comunidad",
  "Se ha solicitado por escrito el permiso para actuar sobre elementos comunes",
  "Los horarios de obra respetan las normas de la comunidad y municipales",
  "Se ha avisado a los vecinos del calendario y las molestias previstas",
  "El presupuesto recoge la retirada y gestión de escombros",
  "Está claro quién se encarga de los residuos y a dónde van",
  "Existe un calendario por fases con holguras",
  "Se han identificado los principales riesgos e imprevistos del proyecto",
  "Un técnico competente ha comprobado qué elementos son estructurales",
  "No se actúa sobre posibles elementos estructurales sin comprobación previa",
]
`;
